Improve Forge launch reliability and auto download mirrors.
Fix module-path/ignoreList handling for Forge 1.20.1, add on-device source probing, and ship community project detail UI.

Co-authored-by: Cursor <cursoragent@cursor.com>